--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,36 @@
     "plugins": [
         "@typescript-eslint"
     ],
+    
     "rules": {
-    }
+        "semi": "off",
+        "@typescript-eslint/semi": ["warn"],
+        "@typescript-eslint/no-empty-interface": [
+          "error",
+          {
+            "allowSingleExtends": true
+          }
+        ],
+        "max-len": [2, 100],
+        "@typescript-eslint/no-unused-vars": 2,
+        "import/extensions": [
+            "error",
+            "ignorePackages",
+            {
+              "js": "never",
+              "jsx": "never",
+              "ts": "never",
+              "tsx": "never"
+            }
+         ],
+         "import/prefer-default-export": "off"
+    },
+    "settings": {
+        "import/resolver": {
+          "node": {
+            "extensions": [".ts", ".tsx"],
+            "moduleDirectory": ["src", "node_modules"]
+          }
+        }
+      }
 }
